fix visible SlidableHelper on phone

--- a/src/components/SlidableHelper/style.scss
+++ b/src/components/SlidableHelper/style.scss
@@ -2,36 +2,6 @@
 @import '@material/theme/mixins';
 @import '@material/elevation/mixins';
 
-@keyframes mouse-dot {
-  from {
-    color: transparent;
-  }
-
-  33% {
-    color: #fff;
-  }
-
-  to {
-    padding-top: 20px;
-    color: transparent;
-  }
-}
-
-@keyframes touch-dot {
-  from {
-    opacity: 0;
-  }
-
-  33% {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-    transform: translate3d(0, -20px, 0);
-  }
-}
-
 .slidable-helper {
   position: absolute;
   left: 50%;
@@ -59,42 +29,44 @@
   &:before,
   &:after {
     position: relative;
-    bottom: 0;
     display: block;
     box-sizing: border-box;
-    width: 10px;
-    height: 10px;
     margin: 0 auto;
-    content: '';
     transition: mdc-animation-enter(opacity, 0.8s, 2.5s),
       animation-moving-flash(transform, 1.5s, 2.5s);
-    border-radius: 100%;
-    background: #fff;
-    line-height: 0;
     text-align: center;
     will-change: opacity, transform;
   }
 
   &:before {
+    bottom: 0;
+    width: 10px;
+    height: 10px;
+    content: '';
     animation: touch-dot 1.5s $animation-moving-flash-function infinite;
+    border-radius: 100%;
+    background: #fff;
+    line-height: 0;
 
     @include media-query(phone) {
       @include mdc-elevation(1);
     }
   }
 
-  &:after {
-    width: 31px;
-    height: 50px;
-    margin-top: 20px;
-    margin-bottom: 15px;
-    content: '•';
-    animation: mouse-dot 1.5s $animation-moving-flash-function infinite;
-    border: 2px solid white;
-    border-radius: 30px;
-    background: transparent;
-    font-size: 22px;
-    line-height: 1;
+  &:not(.slidable-helper_touch) {
+    &:after {
+      width: 31px;
+      height: 50px;
+      margin-top: 20px;
+      margin-bottom: 15px;
+      content: '•';
+      animation: mouse-dot 1.5s $animation-moving-flash-function infinite;
+      border: 2px solid white;
+      border-radius: 30px;
+      background: transparent;
+      font-size: 22px;
+      line-height: 1;
+    }
   }
 
   &_notouch {
@@ -118,6 +90,18 @@
 
     &:after {
       display: none;
+
+      @include media-query(phone) {
+        position: absolute;
+        top: -30px;
+        right: 0;
+        bottom: -10px;
+        left: 0;
+        z-index: -1;
+        display: block;
+        content: '';
+        background: rgba($mdc-theme-primary-dark, 0.8);
+      }
     }
   }
 
@@ -128,6 +112,36 @@
 
   &_hidden {
     transition: animation-moving-flash(opacity, 500ms);
+    opacity: 0;
+  }
+}
+
+@keyframes mouse-dot {
+  from {
+    color: transparent;
+  }
+
+  33% {
+    color: #fff;
+  }
+
+  to {
+    padding-top: 20px;
+    color: transparent;
+  }
+}
+
+@keyframes touch-dot {
+  from {
+    opacity: 0;
+  }
+
+  33% {
+    opacity: 1;
+  }
+
+  to {
+    transform: translate3d(0, -20px, 0);
     opacity: 0;
   }
 }
